# backend/src/main/java/com/borderlessteamwork/sixpeng/domain/project/dto/response/ProjectResponse.java
@@ -1,12 +1,14 @@
 package com.borderlessteamwork.sixpeng.domain.project.dto.response;
 
 import com.borderlessteamwork.sixpeng.domain.project.entity.Project;
+import com.borderlessteamwork.sixpeng.domain.project.entity.ProjectStatus;
 
 import java.time.LocalDateTime;
 
 public record ProjectResponse(
         Long id,
         String name,
+        ProjectStatus status,
         Long createdBy,
         LocalDateTime createdAt
 ) {
@@ -15,6 +17,7 @@ public record ProjectResponse(
         return new ProjectResponse(
                 project.getId(),
                 project.getName(),
+                project.getStatus(),
                 project.getCreatedBy().getId(),
                 project.getCreatedAt()
         );
